--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Luis Pablo de Jesus Lopez Carrera 202004769</title>
+    <title>Luis</title>
   </head>
   <link rel="stylesheet" href="Estilos.css">
 <body>
   <body background="img/0.1.jpg">
-  <h1>Luis Pablo de Jesus López Carrera</h1>
+  <h1>Luis Pablo</h1>
   <table style="margin: 0 auto" border="2"; width="1120">
     <tr>
       <td><b>Curso</b></td>
